...

              <View style={styles.header}>
                <View style={styles.logoContainer}>
                  {icon ? icon : <Image source={logo} style={styles.logoImage} />}
                </View>
                <Text
                  testID="confirm-modal-title"
                  style={[
                    styles.title,
                    typography('h2'),
                    fontWeight('700'),
                    { color: theme.colors.text },
                  ]}
...
                  autoFocus={true}
                />
              )}

              <View style={styles.buttonContainer}>
                <AppButton
                  testID="confirm-modal-ok"
                  title={
                    timeLeft > 0
                      ? `${confirmLabel || t('common.ok', 'OK')} (${timeLeft})`
                      : confirmLabel || t('common.ok', 'OK')
                  }
                  onPress={onConfirm}
...
